<resources>
    <string name="app_name">Task7.2 Preferences DataStore Guess Number</string>
    <string name="game_title">Guess Number: Preferences DataStore</string>
    <string name="game_subtitle">Те же игровые данные теперь сохраняются в двух Preferences DataStore файлах.</string>
    <string name="status_title">Состояние приложения</string>
    <string name="profile_title">Профиль</string>
    <string name="profile_empty">Профиль не сохранён. Откройте экран авторизации.</string>
    <string name="max_attempts_label">Максимум попыток</string>
    <string name="save_attempts">Сохранить лимит попыток</string>
    <string name="open_login">Открыть авторизацию</string>
    <string name="guess_hint">Введите число от 1 до 100</string>
    <string name="check_guess">Проверить число</string>
    <string name="restart_game">Новая игра</string>
    <string name="enter_guess">Введите число от 1 до 100. Лимит попыток: %1$d.</string>
    <string name="guess_too_small">Загаданное число больше.</string>
    <string name="guess_too_large">Загаданное число меньше.</string>
    <string name="guess_win">Победа! Число %1$d угадано за %2$d попыток. Очки: %3$d.</string>
    <string name="guess_lose">Попытки закончились. Загаданное число было %1$d.</string>
    <string name="guess_invalid">Введите корректное число от 1 до 100.</string>
    <string name="attempts_info">Использовано попыток: %1$d из %2$d.</string>
    <string name="settings_saved">Новый лимит попыток сохранён: %1$d.</string>
    <string name="app_status_template">Запусков: %1$d\nUUID: %2$s\nИгры: %3$d\nПобеды: %4$d\nЛучший счёт: %5$d\nОбщий счёт: %6$d\nЛимит попыток: %7$d</string>
    <string name="profile_status_template">Email: %1$s\nПароль: %2$s</string>
    <string name="login_title">Авторизация</string>
    <string name="login_subtitle">Сохраните email и пароль во второй Preferences DataStore файл.</string>
    <string name="email_label">Email</string>
    <string name="password_label">Пароль</string>
    <string name="email_hint">Введите email</string>
    <string name="password_hint">Введите пароль</string>
    <string name="save_profile">Сохранить профиль</string>
    <string name="clear_profile">Очистить профиль</string>
    <string name="profile_saved">Профиль сохранён.</string>
    <string name="profile_cleared">Профиль очищен.</string>
    <string name="fill_profile_fields">Заполните email и пароль.</string>
    <string name="profile_summary_empty">Сейчас сохранённых данных нет.</string>
    <string name="profile_summary_template">Сохранённый email: %1$s\nСохранённый пароль: %2$s</string>
    <string name="attempts_input_hint">Например, 10</string>
</resources>
